fix(LOC-1000): Align "Add Local Site" tooltip to button.

--- a/src/components/modules/VerticalNav/VerticalNav.scss
+++ b/src/components/modules/VerticalNav/VerticalNav.scss
@@ -25,7 +25,7 @@
 	.VerticalNav_Add {
 		width: 48px;
 		height: 48px !important;
-		margin: 10px 0 10px 10px;
+		margin: 13px 0 10px 10px;
 		padding: 11.5px 0 !important;
 		@include if-theme-light() {
 			background: $white;
